src/objects/CRMWebClient__Interaction_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>CRMWebClient__Attribute__c</fullName>
        <label>Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMWebClient__Interaction_Type__c</fullName>
        <label>Interaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>Integration Events (Watchable)</fullName>
                </value>
                <value>
                    <fullName>Integration Events (Settable)</fullName>
                </value>
                <value>
                    <fullName>Integration Events (Watchable Handler Events)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMWebClient__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMWebClient__Shown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shown</label>
        <type>Checkbox</type>
    </fields>
    <label>Interaction Attribute</label>
    <listViews>
        <fullName>CRMWebClient__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CRMWebClient__Interaction_Attributes</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CRMWebClient__Attribute__c</columns>
        <columns>CRMWebClient__Interaction_Type__c</columns>
        <columns>CRMWebClient__Order__c</columns>
        <columns>CRMWebClient__Shown__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Interaction Attributes</label>
    </listViews>
    <nameField>
        <label>Interaction Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interaction Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>